# ece414-embedded-systems-hybridradarproject-and-labs

./: README.md
Lab03_Pong/: .gitignore  CMakeLists.txt  fsm.c  fsm.h  led_out.c  led_out.h  main.c  sw_in.c  sw_in.h
final-project/: .gitignore  CMakeLists.txt  README.md  TFTMaster.h  TouchScreen.c  buzzer.c  buzzer.h  display.c  display.h  main.c  motion.c  motion.h  serial.c  serial.h  servo.c  servo.h  ts_lcd.c  ultrasonic.c  ultrasonic.h
final-project/Radar_PCB/RadarPCB/: RadarPCB.kicad_pcb  RadarPCB.kicad_prl  RadarPCB.kicad_pro  RadarPCB.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
final-project/Radar_PCB/RadarPCB/RadarFootprints.pretty/: COM07950.kicad_mod  HB100.kicad_mod
final-project/Radar_PCB/RadarPCB/symbols/: 2025-11-07_20-10-28.kicad_sym  COM-07950.kicad_sym
lab03_v4/: .gitignore  README.md  pico_sdk_import.cmake
lab03_v4/include/: game_config.h  led_out.h  sw_in.h
lab03_v4/src/: led_out.c
lab04/: CMakeLists.txt  TODOs.md  arm-gcc-toolchain.cmake  ts_lcd.c  ts_lcd.h  ts_test.c
lab04/sch/Lab4/: Lab4.kicad_prl  Lab4.kicad_pro  Lab4.kicad_sch
lab05/: CMakeLists.txt  TFTMaster.c  TFTMaster.h  TouchDisplay.c  TouchDisplay.h  inputnum.c  inputnum.h  main.c  ts_lcd.c
lab1/Lab1/: CMakeLists.txt  blink2.c
lab2/: CMakeLists.txt  main.c  sw_in.c
lab5_V1/: .gitignore  CMakeLists.txt  TouchScreen.c  inputNum.c  main.c  touchDisplay.c  touchDisplay.h  touchscreen_demo.c  ts_lcd.c  ts_test.c
